# zig-zls-manager

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  MEMORY.md  README.md  SOUL.md  skills-lock.json
.github/workflows/: release.yml
docs/: README.md  ROADMAP.md  TODO.md  api-reference.md  architecture.md  benchmarks.md  comparison.md  spec.md  usage.md
docs/analyses/: architecture-optimization-v2.md  architecture-optimization.md
docs/workflow/: analysis.md  compatibility-flow.md  ide-flow.md  main-flow.md  switch-flow.md
src/: cli.rs  lib.rs  main.rs
src/commands/: clean.rs  completion.rs  config.rs  ide.rs  info.rs  install.rs  list.rs  mod.rs  pair.rs  prune.rs  restore.rs  setup.rs  update.rs  version_use.rs  zls.rs
src/core/: callbacks.rs  channel.rs  compatibility.rs  config.rs  ide.rs  mod.rs  project.rs  tool_manager.rs  zig_manager.rs  zls_manager.rs
src/infra/: api_cache.rs  cache.rs  checksum.rs  downloader.rs  filesystem.rs  mod.rs  path_manager.rs  zig_api.rs  zls_api.rs
src/output/: console_output.rs  dispatcher.rs  json_output.rs  mod.rs  progress.rs  table_output.rs
src/platform/: linux.rs  macos.rs  mod.rs  trait_def.rs  windows.rs
src/utils/: error.rs  format.rs  mod.rs  version.rs
tests/: test_index_and_config.rs
workflow/: install-flow.md
